WISH: selection-color-pair instead of reverse video
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts

TODO: `/etc/udev/rules.d/41-mythtv-permissions.rules'
TODO: exg-- patch
TODO: selection_beg/end should set screen, or so
TODO:        - upgrade to libev-xx
TODO: -rv interacts badly with popups.
TODO:	- gcc-4.4/const/Milos Jakubicek.
        - the binary search algorithm to find precomposed characters
          was faulty, skipping some possible combinations (found by
          Mikachu).
	- enable --mlock option for urxvt with frills on
          systems supporting it (patch by Russell Harmon).
	- urxvt did not compile without frills enabled
          (analysed by Matthew Rosewarne).
        - correctly reset the mbstate after an illegal
          input sequence when handling terminal output (Emanuele Giaquinta).
        - avoid redrawing wide characters with combining enabled on every
          refresh (reported by Mikachu).
        - fix a typo preventing the ISO-646.1991 character set from being
          recognized (http://achurch.org/patch-pile/).
        - better warning for x11 font encoding detection failures, also,
          try to deduce encoding from both font properties and name
          (adapted from http://achurch.org/patch-pile/).
        - resizing the window with the scrollbar disabled via the escapes
          sequence could make the window bigger again (Mikachu).
        - make sure the alignment for fd passing control messages
          is correct and work around some NetBSD issues (Taylor R Campbell).
        - update to libptytty 1.3.

9.06 Sat Nov  8 17:47:18 CET 2008
	- NOTICE: this release updates terminfo/termcap.
        - updates libev to 3.48.
	- the aterm code now frees the as visual and image manager objects
          when a window was closed.
        - do not (wrongly) adjust the virtual line length inside