@@ -170,9 +170,9 @@ rxvt_utf8towcs (const char *str, int len)
 const char *
 rxvt_basename (const char *str) NOTHROW
 {
-  char *base = strrchr (str, '/');
+  const char *base = strrchr (str, '/');
 
-  return (char *) (base ? base + 1 : str);
+  return base ? base + 1 : str;
 }
 
 /*
